--- a/Styles-CSS/main.css
+++ b/Styles-CSS/main.css
@@ -195,11 +195,14 @@ header p {
 }
 
 /* PROJECTS */
+.projectsContainer {
+
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
 .projects {
     width: 90%;
     margin: auto;
-    display: grid;
     padding-top: 50px;
-    gap: 1em;
-    grid-template-columns: 1fr 1fr 1fr;
 }
